--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1543,13 +1543,13 @@ padding-right: 12px !important;
       flex: 9;
       .title {
         font-size: 15px;
-        color: #161A2E;
+        color: var(--dark);
         font-weight: 500;
         line-height: 24px !important;
       }
 
       .subtitle {
-        color: #8D879B;
+        color: var(--steelgrey);
         font-size: 11px;
         margin: 20px 0 16px 0;
         line-height: 18px;
@@ -1572,7 +1572,7 @@ padding-right: 12px !important;
       margin-top: 0.5px !important;
     }
     .tc-title {
-      color: #767E86;
+      color: var(--steelgrey);
       font-size: 10px;
       line-height: 16px;
       font-weight: 500;
@@ -1582,12 +1582,12 @@ padding-right: 12px !important;
       letter-spacing: 1px;
     }
     .tc-subtitle {
-      color: #0A1D32;
+      color: var(--dark);
       font-size: 20px;
       font-weight: 500;
     }
     .return{
-      color: #767E86;
+      color: var(--steelgrey);
       line-height: 21px;
       font-size: 13px;
       margin-top: -14px;
@@ -1621,14 +1621,14 @@ padding-right: 12px !important;
   width: 36px;
   height: 24px;
   background-color: #F0F7FF;
-  color: #767E86;
+  color: var(--steelgrey);
   padding-top: 4px;
   border-radius: 4px;
 }
 
 .selected {
-  color: #FFFFFF !important;
-  background-color: #3792FC !important;
+  color: white !important;
+  background-color: var(--primary) !important;
 }
 
 p {
@@ -1660,7 +1660,7 @@ p {
     font-weight: 700;
     line-height: 21px;
     letter-spacing: 0px;
-    color: #0a1d32;
+    color: var(--dark);
   }
   .body {
     display: flex;
@@ -1674,7 +1674,7 @@ p {
         font-weight: 600;
         line-height: 16px;
         letter-spacing: 1px;
-        color: #161a2e;
+        color: var(--dark);
       }
       .content {
         text-align: left;
@@ -1682,7 +1682,7 @@ p {
         font-weight: 400;
         line-height: 21px;
         letter-spacing: 0px;
-        color: #767e86;
+        color: var(--steelgrey);
       }
     }
     .right {
@@ -1701,7 +1701,7 @@ p {
         font-weight: 400;
         line-height: 21px;
         letter-spacing: 0px;
-        color: #767e86;
+        color: var(--steelgrey);
       }
     }
   }
@@ -1722,7 +1722,7 @@ p {
     font-weight: 600;
     line-height: 24px;
     letter-spacing: 0px;
-    color: #0a1d32;
+    color: var(--dark);
     margin-bottom: 10px;
     margin-top: 0;
     text-align: left;
@@ -1732,7 +1732,7 @@ p {
     font-weight: 400;
     line-height: 21px;
     letter-spacing: 0px;
-    color: #767e86;
+    color: var(--steelgrey);
     text-align: left;
   }
 }
