--- a/react_webviews/src/dashboard/PassiveIndexFunds/mini-components/commonStyles.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/mini-components/commonStyles.scss
@@ -1,7 +1,7 @@
 // Passive Fund Chart Styles
 .passive-funds-details{
   .tooltip-container {
-    background-color: #fff;
+    background-color: white;
     padding: 10px 10px;
     border-radius: 4px;
   }
@@ -26,7 +26,7 @@
     line-height: 16px;
     letter-spacing: 1px;
     text-align: center;
-    color: #767e86;
+    color: var(--steelgrey);
     padding: 0;
     margin: 0;
   }
@@ -35,7 +35,7 @@
     line-height: 20px;
     font-weight: 400;
     letter-spacing: 0px;
-    color: #161a2e;
+    color: var(--dark);
     padding: 0;
     margin: 0;
   }
@@ -44,7 +44,7 @@
     font-weight: 600;
     line-height: 9px;
     letter-spacing: 0px;
-    fill: #767e86;
+    fill: var(--steelgrey);
     opacity: 0.5;
   }
   .yaxis-label {
@@ -53,7 +53,7 @@
     line-height: 9px;
     letter-spacing: 0px;
     text-align: right;
-    fill: #767e86;
+    fill: var(--steelgrey);
     opacity: 0.5;
   }
 }
