--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -265,7 +265,7 @@
   justify-content: space-between;
 
   .kyc-main-subtitle {
-    padding-bottom: 30px;
+    margin-bottom: 30px;
   }
 
   .kcd-google-button {
