--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -42,7 +42,7 @@
     line-height: 21px;
     color: var(--steelgrey);
     padding: 0 15px 0 0;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   
   .kyc-upload-doc-options {
@@ -91,14 +91,15 @@
   }
 
   .banner .edit {
-    text-transform: uppercase;
     color: var(--secondary);
-    font-weight: bold;
+    font-weight: 700;
     cursor: pointer;
+    font-size: 12px;
+    letter-spacing: 1px;
   }
 
   .doc-title {
-    font-weight: bold;
+    font-weight: 500;
     font-size: 15px;
     line-height: 24px;
     color: var(--default);
@@ -159,10 +160,6 @@
     margin-top: 3px;
   }
 
-  .web-upload-container {
-    // padding: 30px 0;
-  }
-
   .camera-upload-container {
     display: flex;
     padding: 30px 0;
@@ -213,3 +210,12 @@
   }
 }
 
+.pending-bank-verification-dialog-content {
+  .wv-bc-left {
+    flex: 0 1 72%;
+  }
+}
+
+.pending-bank-verification-dialog-subtitle {
+  margin: 10px 0 0;
+}
