--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -295,3 +295,16 @@
 }
 
 ///////////// BANK VERIFY END //////////////
+
+.penny-bank-verification-dialog-content {
+  align-items: center;
+  margin: -15px -15px 0 0;
+  
+  .wv-bc-left {
+    flex: 0 1 72%;
+  }
+}
+
+.penny-bank-verification-dialog-subtitle {
+  margin: 10px 0 0;
+}
