added border color

--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -81,6 +81,7 @@
 
     .selected-doc {
       color: var(--primary);
+      border-color: var(--primary);
       font-weight: 600;
 
       .kyc-upload-doc-check-icon {
