--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -181,9 +181,9 @@
 
   .sample-document {
     margin: 0 auto;
-    font-size: 10px;
+    font-size: 8px;
     text-transform: uppercase;
-    font-weight: 800;
+    font-weight: bold;
     margin-top: 30px;
     text-align: center;
     color: var(--secondary);
