--- a/react_webviews/src/kyc/Style.scss
+++ b/react_webviews/src/kyc/Style.scss
@@ -226,6 +226,10 @@
         width: 22px;
         margin-right: 10px;
       }
+
+      .kbd-can-check-icon {
+        width: 15px;
+      }
     }
   }
 }
@@ -299,7 +303,7 @@
 .penny-bank-verification-dialog-content {
   align-items: center;
   margin: -15px -15px 0 0;
-  
+
   .wv-bc-left {
     flex: 0 1 72%;
   }
