--- a/react_webviews/src/kyc_esign/components/Style.scss
+++ b/react_webviews/src/kyc_esign/components/Style.scss
@@ -130,9 +130,9 @@ $text-color2: #8D879B;
     }
 
     .title {
-      font-size: 20px;
+      font-size: 17px;
       color: var(--dark);
-      font-weight: 700;
+      font-weight: 500;
     }
 
     .text {
@@ -158,7 +158,7 @@ $text-color2: #8D879B;
     }
 
     .subtitle {
-      font-size: 14px;
+      font-size: 13px;
       font-weight: 500;
       color: var(--primary);
       margin: 30px 0 0 0;
@@ -173,29 +173,8 @@ $text-color2: #8D879B;
     }
   }
 
-  .alert-status-info {
-    display: flex;
-    column-gap: 10px;
-    align-items: flex-start;
-    padding: 15px 15px 20px 15px;
-    border: 1px solid #fff5f6;
-    border-radius: 4px;
+  .wv-info-bubble {
     margin-top: 25px;
-    background-color: #fff6ce;
-
-    img {
-      width: 14px;
-    }
-
-    .text {
-      color: #160d2e;
-      font-size: 14px;
-
-      .title {
-        font-weight: 700;
-        margin: -2px 0 0 0;
-      }
-    }
   }
 
   .account-status-container {
