--- a/react_webviews/src/kyc_esign/components/Style.scss
+++ b/react_webviews/src/kyc_esign/components/Style.scss
@@ -1,6 +1,5 @@
 $status-text-margin: 20px 0 10px 0;
 $text-color1: var(--steelgrey);
-$text-color2: #8D879B;
 
 @mixin status_text {
     font-size: 14px;
@@ -26,7 +25,7 @@ $text-color2: #8D879B;
 }
 
 .nsdl-status {
-    color: $text-color2;
+    color: $text-color1;
 
     .nsdl-status-text {
         margin: $status-text-margin;
@@ -34,13 +33,14 @@ $text-color2: #8D879B;
     }
 }
 
-.esign-image {
-}
-
 .esign-desc {
-    color: $text-color2;
+    color: $text-color1;
     margin: 20px 0 40px 0;
     @include status_text();
+
+    strong {
+      font-weight: 600;
+    }
 }
 
 .esign-subtitle {
@@ -77,7 +77,7 @@ $text-color2: #8D879B;
         flex: 9;
         font-size: 13px;
         line-height: 22px;
-        color: #8D879B;
+        color: $text-color1;
       }
     }
 }
@@ -139,7 +139,7 @@ $text-color2: #8D879B;
       @include d-flex-center();
       font-size: 14px;
       line-height: 19px;
-      color: #8d879b;
+      color: $text-color1;
       margin-top: 10px;
       column-gap: 5px;
 
