--- a/react_webviews/src/kyc/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/mini-components/mini-components.scss
@@ -501,7 +501,7 @@
 #sample-docs {
   .title {
     font-size: 20px;
-    color: #160d2e;
+    color: color(--dark);
     font-weight: 600;
   }
 
@@ -518,10 +518,10 @@
   }
 
   .doc .doc-name {
-    font-weight: 800;
+    font-weight: 500;
     font-size: 13px;
     line-height: 21px;
-    color: #0a1d32;
+    color: var(--dark);
   }
 
   .doc fieldset legend {
