--- a/react_webviews/src/common/ui/LoadingBottomSheet/WVLoadingBottomSheet.scss
+++ b/react_webviews/src/common/ui/LoadingBottomSheet/WVLoadingBottomSheet.scss
@@ -1,12 +1,28 @@
+body[data-device="web"]{
+  #wv-loading-bottom-sheet {
+    .MuiDialog-paper {
+      position: unset;
+      width: 100%;
+      bottom: unset;
+      left: unset;
+      border-radius: 8px;
+    }
+  }
+}
+  
+
 .wv-loading-bs {
   .MuiDialog-paper {
-      margin-left: 0 !important;
-      margin-right: 0 !important;
-    }
-
-  .MuiDialog-paperWidthSm {
+    position: fixed;
     width: 100%;
-    align-self: flex-end;
+    bottom: 0px;
+    left: -20px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .MuiDialogActions-root {
+    margin: 0;
   }
 
   .wv-lb-content {
@@ -28,7 +44,6 @@
       font-size: 15px;
       line-height: 24px;
       color: var(--dark);
-      text-transform: capitalize;
       
       span {
         font-weight: 500;
@@ -42,7 +57,6 @@
       color: var(--steelgrey);
       font-size: 13px;
       line-height: 21px;
-      text-transform: capitalize;
       margin-top: 5px;
     }
   }
