--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -419,7 +419,7 @@
   }
 }
 
-// F&OIncomeProof START ------------
+// FnOIncomeProof START ------------
 .kyc-fno-header-optional-text {
   font-weight: normal;
   font-size: 20px;
@@ -498,9 +498,9 @@
 
 .kyc-fno-encryption-disclaimer {
   display: block;
-  margin: 40px auto 0;
+  margin: 40px auto;
 }
-// F&OIncomeProof END ------------
+// FnOIncomeProof END ------------
 
 // ------ WebcamSelfie -----------
 .webcam-selfie {
