--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -62,7 +62,7 @@
       font-size: 13px;
       border-radius: 4px;
       margin: 10px 10px 0 0;
-      min-width: 140px;
+      min-width: 130px;
       display: flex;
       justify-content: space-between;
       cursor: pointer;
@@ -177,14 +177,13 @@
   }
 
   .sample-document {
-    margin: 0 auto;
-    font-size: 8px;
-    text-transform: uppercase;
-    font-weight: bold;
     margin-top: 30px;
     text-align: center;
-    color: var(--secondary);
     cursor: pointer;
+
+    .wv-clickable-text-elem {
+      font-size: 8px;
+    }
   }
 
   .ssl-container {
