pr fix + fundlist css changes

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1951,7 +1951,7 @@ $header-title-font-size: 20px;
     }
   }
 }
-.header-color-blue{
+.passive-index-header-color{
   background-color: #002576 !important;
   color: white !important;
 }
