morningStar added css props to genericListCard

--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -94,3 +94,8 @@
   border-radius: 7px;
   margin-top: -25px !important;
 }
+
+.star-icon-na{
+  position: absolute;
+  margin-top: 0px !important;
+}
