--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1569,7 +1569,7 @@ padding-right: 12px !important;
     }
     .star-icon{
       position: absolute;
-      margin-top: 0.5px !important;
+      margin-top: 0.5px;
     }
     .tc-title {
       color: var(--steelgrey);
