--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -170,9 +170,11 @@
       .kaim-terms-info {
         margin-left: 10px;
 
-        span {
+        a {
           color: var(--primary);
           font-weight: 600;
+          cursor: pointer;
+          text-decoration: none;
         }
       }
     }
