--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -78,6 +78,7 @@
 
     .title {
       margin-left: 10px;
+      font-weight: 500;
     }
 
     .subtitle {
@@ -109,7 +110,7 @@
   }
 
   .sub-title {
-    margin-top: -15px;
+    margin-top: -10px;
     font-size: 13px;
     line-height: 21px;
     margin-bottom: 20px;
@@ -187,13 +188,14 @@
     column-gap: 10px;
     color: var(--dark);
     font-weight: 500;
-    margin-top: -10px;
+    margin-bottom: 10px;
 
     .edit {
       color: var(--secondary);
       font-size: 12px;
-      font-weight: 800;
+      font-weight: 700;
       cursor: pointer;
+      letter-spacing: 1px;
     }
   }
 
