--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -104,7 +104,7 @@
     font-weight: 500;
     font-size: 15px;
     line-height: 24px;
-    color: var(--default);
+    color: var(--dark);
   }
 
   .docs-image-container {
