Fixed navigation and css

--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -237,6 +237,10 @@
 
   .form-download-btn {
     justify-content: space-between;
+
+    img {
+      margin-left: 20px;
+    }
   }
 
   .page-content {
