--- a/react_webviews/src/common/ui/Filter/commonStyles.scss
+++ b/react_webviews/src/common/ui/Filter/commonStyles.scss
@@ -73,3 +73,10 @@
     }
   }
 }
+.filter-btn {
+  border: 1px solid rgba(255,255,255,0.5) !important;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05) !important;
+  min-height: 40px;
+  background-color: white;
+  border-radius: 4px;
+ }
