--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1525,7 +1525,7 @@ padding-right: 12px !important;
 //Passive Funds List Style :-
   .generic-card{
     min-height: 215px !important;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05) !important;
     border-radius: 0px !important;
     margin-top: 20px;
     margin-bottom: 30px !important;
