--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -39,6 +39,11 @@
   }
 }
 
+.md-dialog-content-nps-pension-house-image {
+  width: 70px;
+  height: 70px;
+}
+
 .nps-know-more-header {
   text-align: center;
   margin: 20px auto;
