--- a/react_webviews/src/common/ui/GenericListCard/WVGenericListCardSheet.Scss
+++ b/react_webviews/src/common/ui/GenericListCard/WVGenericListCardSheet.Scss
@@ -1,5 +1,5 @@
 //Passive Funds List Style :-
-.generic-card{
+.wvgeneric-card{
     min-height: 215px !important;
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05) !important;
     border-radius: 0px !important;
@@ -8,7 +8,7 @@
     padding-top: 20px !important;
   }
 
-  .generic-card-details{
+  .wvgeneric-card-details{
     display: flex;
     justify-content: space-between;
     cursor: pointer;
