--- a/react_webviews/src/common/ui/MenuListDropDown/WVMenuListDropDownSheet.scss
+++ b/react_webviews/src/common/ui/MenuListDropDown/WVMenuListDropDownSheet.scss
@@ -1,5 +1,5 @@
-.menulist-products{
-  .menu-list-dropdown{
+.wvmenulist-products{
+  .wvmenu-list-dropdown{
     display: flex;
     align-items: center;
     .image-icon{
@@ -16,21 +16,21 @@
         justify-content: space-between;
         cursor: pointer;
     }
-    .menu-title{
+    .wvmenu-title{
       color: #160d2e;
       font-size: 16px;
       margin-bottom: 5px;
       font-weight: 500;
       flex-grow: 1;
     }
-    .menu-subtitle{
+    .wvmenu-subtitle{
        color: #7e7e7e;
        font-size: 13px;
        font-weight: 400;
        line-height: 15.41px;
     }
   }
-  .menu-list-resume_flag{
+  .wvmenu-list-resume_flag{
     background-color: #ff6868;
     letter-spacing: 0.1;
      font-size: 8px;
@@ -46,14 +46,14 @@
      left: 6px;
      height: 14px;
   }
-  .menulist-img{
+  .wvmenulist-img{
     float: right ;
   }
-  .menulist-block{
+  .wvmenulist-block{
     display: flex;
     width: 100% !important;
   }
-  .menulist-header-title{
+  .wvmenulist-header-title{
     font-weight: 500;
     color: #160d2e;
     font-size: 17px;
@@ -61,8 +61,8 @@
     margin-bottom: 15px;
    }
   
-  .menulist-dropdown-lists{
-    .menulist-dropdown{
+  .wvmenulist-dropdown-lists{
+    .wvmenulist-dropdown{
       width: 100%;
       display:flex;
       align-items: center;
@@ -83,19 +83,19 @@
         transform: translateY(-2px);
       }
     }
-      .menulist-dropdown-types{
+      .wvmenulist-dropdown-types{
         display: flex;
         padding: 0 10px;
         width: 100% !important;
         padding: 0px;
       }
-      .menulist-dropdown-logos{
+      .wvmenulist-dropdown-logos{
         margin-right:25px;
         width: 40px;
         height: 40px;
         border-radius: 2px;
       }
-      .menulist-dropdown-logos_small{
+      .wvmenulist-dropdown-logos_small{
         margin: 20px 25px 0px 3px;
         width: 40px;
         height: 40px;
@@ -103,7 +103,7 @@
         padding-left: 3px;
         padding-right: 3px;
       }
-      .menulist-dropdown-logos_text{
+      .wvmenulist-dropdown-logos_text{
         color: #160d2e;
         font-size:13px;
         margin-bottom: 5px; 
@@ -112,12 +112,12 @@
          line-height: 15.41px;
          width: 100%;
       } 
-      .menulist-dropdown-logos_subtext{
+      .wvmenulist-dropdown-logos_subtext{
        color: #757474;
        font-weight: 300; 
        font-size: 13.6px;
       }
-      .menulist-dropdown-line-style{
+      .wvmenulist-dropdown-line-style{
         border-bottom-width: 1px;
          border-bottom-color: #EFEDF2;
          border-bottom-style: solid;
