--- a/react_webviews/src/dashboard/PassiveIndexFunds/components/PassiveFundDetails.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/components/PassiveFundDetails.scss
@@ -46,7 +46,7 @@
     letter-spacing: 0px;
     color: var(--steelgrey);
   }
-  .pfd-nav-returns{
+  .pfd-nav-returns {
     font-size: 15px;
     line-height: 24px;
   }
@@ -58,11 +58,11 @@
     background-color: #ededed;
     margin: 30px 20px 30px 20px;
   }
-  .return-condition{
-    color: #D6D6D6 !important;
+  .return-condition {
+    color: #d6d6d6 !important;
   }
 }
-.pfd-image{
+.pfd-image {
   width: 50px;
   height: 50px;
 }
