position sticky change

--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -13,6 +13,10 @@
     cursor: pointer;
   }
 }
+
+.Container.passive-fund-list-page{
+  overflow: visible !important;
+}
 .fund-number{
   color: var(--steelgrey);
   line-height: 16px;
