--- a/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
+++ b/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
@@ -3,6 +3,11 @@
    justify-content: space-between;
    cursor: pointer;
    margin: 0 auto;
+   position: sticky;
+   left: 0;
+   right: 0;
+   top: 50px;
+   background-color: #fff;
 
    .wvtext-block {
      width: 36px;
