star add member page changes

--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -1875,3 +1875,15 @@
     padding-left: 12.5px;
   }
 }
+
+
+.horizontal-checkbox-layout{
+  display: flex;
+  align-items: center;
+  margin: -20px 0 0 20px;
+  .add-member-generic-checkbox{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+}
