--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -4,6 +4,7 @@
   line-height: 21px;
   letter-spacing: 0px;
   color: var(--steelgrey);
+  margin-top: -12px !important;
   .category-desc-button {
     font-size: 12px;
     font-weight: 700;
@@ -22,6 +23,7 @@
   line-height: 16px;
   font-size: 10px;
   font-weight: 400;
+  margin-top: -5px !important;
 }
 
 .react-responsive-carousel {
