--- a/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
+++ b/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
@@ -2,7 +2,7 @@
    display: flex !important;
    justify-content: space-between;
    cursor: pointer;
-   margin: 0 auto;
+   margin: 0px;
    position: sticky;
    left: 0;
    right: 0;
