--- a/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
+++ b/react_webviews/src/common/ui/YearFilter/WVYearFilterSheet.scss
@@ -8,7 +8,7 @@
    right: 0;
    top: 50px;
    background-color: #fff;
-
+   z-index: 5;
    .wvtext-block {
      width: 36px;
      height: 24px;
