added WVProductListCard component

--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -114,3 +114,11 @@
   position: absolute;
   margin-top: 0px !important;
 }
+
+.wv-pdl-header-title{
+  margin-right: 10px !important;
+}
+
+.wv-pdl-header-image{
+  margin-left: auto !important;
+}
