Added number files selected text

--- a/react_webviews/src/dashboard/nps/style.scss
+++ b/react_webviews/src/dashboard/nps/style.scss
@@ -39,6 +39,12 @@
   }
 }
 
+.nps-upload-file-text {
+  text-align: center;
+  margin: 45px 0;
+  font-size: 16px;
+}
+
 .nps-know-more-header {
   text-align: center;
   margin: 20px auto;
