--- a/react_webviews/src/reports/commonStyles.scss
+++ b/react_webviews/src/reports/commonStyles.scss
@@ -709,7 +709,7 @@
       margin-left: -15px;
     }
 
-    a {
+    .rim-terms-text {
       cursor: pointer;
       color: #337ab7;
       text-decoration: none;
