--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -593,7 +593,15 @@
 
 /////////////// End of Campaign Dialog /////////////////////////
 
-
+////////////// Account already exists Dialog //////////////////
+.account-already-exists-text{
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 2px;
+  letter-spacing: 0px;
+  color: #767e86;
+}
+/////////////////End of Account already exists Dialog
 
 @media only screen and (max-width: 700px) {
   #invest-bottom-dialog, #sdk-campaign-dialog {
