Reverted equity changes

--- a/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
+++ b/react_webviews/src/kyc/BankKyc/KycUploadDocuments.scss
@@ -39,8 +39,7 @@
 
   .subtitle {
     font-size: 13px;
-    line-height: 21px;
-    color: var(--steelgrey);
+    color: #8d879b;
     padding: 0 15px 0 0;
     margin-bottom: 20px;
   }
@@ -51,8 +50,6 @@
     align-items: center;
     line-height: 1.5;
     padding-bottom: 20px;
-    column-gap: 10px;
-    row-gap: 10px;
 
     .kyc-upload-doc-option-type {
       color: #160d2e;
@@ -138,13 +135,8 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    // position: relative;
+    position: relative;
     cursor: pointer;
-
-    .button-container {
-      margin-top: 10px;
-      width: 100%;
-    }
   }
 
   .upload-container svg {
@@ -160,7 +152,7 @@
   }
 
   .web-upload-container {
-    // padding: 30px 0;
+    padding: 30px 0;
   }
 
   .camera-upload-container {
@@ -195,21 +187,3 @@
     margin: 20px 0 40px 0;
   }
 }
-
-.kuc-sign-image-container {
-  position: relative;
-  border-radius: 6px;
-  background-color: white;
-  margin-bottom: 5px;
-
-  .kuc-sign-image {
-    height: 130px;
-    width: 152px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-bottom: 0;
-  }
-}
-
