--- a/react_webviews/src/kyc/Journey/Journey.scss
+++ b/react_webviews/src/kyc/Journey/Journey.scss
@@ -7,23 +7,18 @@
 .kyc-journey .kyc-pj-content {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 50px;
   img {
     align-self: flex-start;
-    margin-left: 20px;
   }
 }
 
-.kyc-journey .kyc-pj-bottom {
-  margin-bottom: 40px;
-}
-
-.kyc-journey .kyc-pj-bottom .pj-bottom-info-box {
+.kyc-journey .kyc-pj-content .pj-bottom-info-box {
   display: flex;
   align-items: center;
-  margin-top: 20px;
+  margin-top: 10px;
 
   .icon {
-    margin: 0 10px 0 0;
     align-self: center;
   }
 }
@@ -36,7 +31,7 @@
   color: #0a1d32;
   font-size: 20px;
   font-weight: 600;
-  margin: 0 0 10px 0;
+  margin: 0 0 20px 0;
 
   .pj-sub-text {
     font-size: 13px;
@@ -66,11 +61,7 @@
 }
 
 .kyc-journey-subtitle {
-  margin: 20px 0;
-}
-
-.kyc-compliant-subtitle {
-  margin: 10px 0 20px 0;
+  margin-bottom: 20px;
 }
 
 .kyc-journey .alert-status-info {
@@ -78,15 +69,14 @@
 }
 
 .kyc-journey .steps-container {
-  margin-top: 20px;
-  margin-left: 10px;
+  margin-top: 40px;
 }
 
 .kyc-journey .steps-container .step {
   display: flex;
-  flex-direction: column;
-  min-height: 60px;
-  padding-bottom: 15px;
+  // align-items: center;
+  height: 60px;
+  padding-bottom: 14px;
   position: relative;
 }
 
@@ -126,6 +116,7 @@
 .kyc-journey .steps-container .step .title {
   margin-left: 40px;
   position: relative;
+  top: -13px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -148,9 +139,10 @@
 }
 
 .kyc-journey .steps-container .step .disc {
+  position: absolute;
+  top: 20px;
   margin-left: 40px;
   font-size: 13px;
-  margin-top: 10px;
 }
 
 .kyc-journey .steps-container .step .title__selected {
