--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -1,14 +1,3 @@
-@mixin d-flex-space-between {
-  display: flex;
-  justify-content: space-between;
-}
-
-@mixin block-fit {
-  display: block;
-  width: 100%;
-  object-fit: contain;
-}
-
 #kyc-upload-intro {
   .banner {
     display: flex;
@@ -91,10 +80,8 @@
   }
 
   .sub-title {
-    margin-top: -15px;
+    margin-top: -18px;
     font-size: 13px;
-    line-height: 21px;
-    margin-bottom: 20px;
   }
 
   .pan-alert {
@@ -108,14 +95,9 @@
     flex-wrap: nowrap;
   }
 
-  .instructions-container {
-    margin: 10px;
-  }
-
   .ipv_footer_instructions {
-    font-size: 15px;
-    line-height: 24px;
-    text-align: left;
+    margin-top: 10px;
+    line-height: 1.5;
   }
 
   .ipv_code {
@@ -123,30 +105,22 @@
     font-size: 26px;
     line-height: 31px;
     letter-spacing: 7.5px;
-    color: var(--primary);
+    color: #331c6b;
     margin-top: 10px;
-    text-align: left;
   }
 
-  .doc-upload-note-row {
-    @include d-flex-space-between();
-    align-items: center;
-    margin-top: 40px;
+  .flex-between-center {
+    margin-top: 14px;
 
-    .upload-note {
-      font-size: 13px;
-      line-height: 21px;
-      color: var(--dark);
-      text-align: left;
+    .know_more {
+      font-size: 14px;
+      color: #160d2e;
     }
 
-    .know-more-button {
+    .link {
       color: var(--secondary);
-      font-size: 12px;
-      line-height: 14px;
-      font-weight: bold;
-      min-width: 112px;
-      text-align: right;
+      font-size: 10px;
+      margin: 5px 0 0;
       cursor: pointer;
     }
   }
@@ -159,8 +133,6 @@
     display: flex;
     justify-content: space-between;
     column-gap: 10px;
-    color: var(--dark);
-    font-weight: 500;
 
     .edit {
       color: var(--secondary);
@@ -169,27 +141,17 @@
       cursor: pointer;
     }
   }
-
-  .address-detail {
-    margin: 10px 0 30px 0;
-    color: var(--steelgrey);
-  }
 }
 
 .kyc-doc-upload-container {
   margin-top: 20px;
   border: 1px dashed var(--skelton-color);
   padding: 10px 0;
-  text-align: center;
 
   .icon {
     display: block;
     margin: 70px auto 20px auto;
     width: 143px;
-  }
-
-  .video-controls {
-    max-width: 100%;
   }
 }
 
@@ -201,18 +163,14 @@
   text-align: center;
   line-height: 1.5;
   color: #160d2e;
-  margin-bottom: 10px;
 }
 
 .kyc-doc-upload-container .preview {
-  @include block-fit();
+  display: block;
+  width: 100%;
+  object-fit: contain;
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
-  margin-top: 10px;
-}
-
-.kyc-doc-upload-container .default {
-  @include block-fit();
   margin-top: 10px;
 }
 
@@ -259,30 +217,5 @@
     font-size: 10px;
     font-weight: 800;
     margin-top: 5px;
-  }
-
-  .button-container {
-    padding: 0 10px;
-  }
-}
-
-.align-left {
-  text-align: left;
-}
-
-.kuc-sign-image-container {
-  position: relative;
-  border-radius: 6px;
-  background-color: white;
-  margin-bottom: 5px;
-
-  .kuc-sign-image {
-    height: 130px;
-    width: 152px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin-bottom: 0;
   }
 }
