--- a/react_webviews/src/kyc_esign/components/Style.scss
+++ b/react_webviews/src/kyc_esign/components/Style.scss
@@ -1,16 +1,10 @@
 $status-text-margin: 20px 0 10px 0;
-$text-color1: var(--steelgrey);
+$text-color1: #767E86;
 $text-color2: #8D879B;
 
 @mixin status_text {
     font-size: 14px;
     line-height: 21px;
-}
-
-@mixin d-flex-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .digi-status {
@@ -95,7 +89,7 @@ $text-color2: #8D879B;
       line-height: 9px;
       letter-spacing: 1px;
       text-transform: uppercase;
-      color: $text-color1;
+      color: #767E86;
     }
 
     .bottom-image {
@@ -130,13 +124,15 @@ $text-color2: #8D879B;
     }
 
     .title {
-      font-size: 20px;
-      color: var(--dark);
+      font-size: 15px;
+      color: #160d2e;
       font-weight: 700;
     }
 
     .text {
-      @include d-flex-center();
+      display: flex;
+      justify-content: center;
+      align-items: center;
       font-size: 14px;
       line-height: 19px;
       color: #8d879b;
@@ -153,23 +149,16 @@ $text-color2: #8D879B;
       font-size: 13px;
       line-height: 22px;
       text-align: center;
-      color: $text-color1;
+      color: #767e86;
       margin-top: 30px;
     }
 
     .subtitle {
       font-size: 14px;
-      font-weight: 500;
-      color: var(--primary);
+      font-weight: 400;
+      color: #4f2da7;
       margin: 30px 0 0 0;
       cursor: pointer;
-    }
-
-    .sub-title {
-      @include d-flex-center();
-      font-size: 13px;
-      line-height: 22px;
-      color: $text-color1
     }
   }
 
@@ -195,27 +184,6 @@ $text-color2: #8D879B;
         font-weight: 700;
         margin: -2px 0 0 0;
       }
-    }
-  }
-
-  .account-status-container {
-    margin: 40px 0;
-
-    .account-status {
-      font-weight: 500;
-      font-size: 17px;
-      line-height: 20px;
-      color: var(--dark);
-      margin-bottom: 20px;
-    }
-
-    .status {
-      color: $text-color1;
-    }
-
-    .step-content {
-      margin-top: -10px;
-      text-transform: initial;
     }
   }
 }
