--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1211,6 +1211,10 @@ $header-title-font-size: 20px;
   }
   .common-steps-images_steps{
     margin: 20px 0 0 0;
+      .what-is-covered-img{
+        width: 70px !important;
+        height: 60px !important;
+      }
   }
 }
 
