--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -106,8 +106,9 @@
   margin: 30px 0;
 }
 .plan-success-heading-icon {
-  text-align: center;
-   margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
 }
 .plan-success-heading-img{
   width: 360px !important;
@@ -127,8 +128,10 @@
 }
 .AccordionListIcon {
   position: relative;
-   top: 2px;
-   margin-right: 10px;
+  top: 2px;
+  margin: 0 !important;
+  width: 20px !important;
+  height: 20px !important;
 }
 .AccordionList1 {
   margin-right: 10;
@@ -138,6 +141,9 @@
    flex-direction: row;
    align-items: center;
    position: relative;
+   .AccordianTitleValue{
+     margin-left: 10px;
+   }
 }
 .AccordionDescription {
   font-weight: 400;
