--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -2005,7 +2005,7 @@
 }
 
 .disease_specific_plan_img{
-  margin: 18px 26px 0px 8px !important;
+  margin: 18px 0 0px 0 !important;
   width: 40px !important; 
   height: 40px !important;
 }
