--- a/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.Scss
+++ b/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.Scss
@@ -24,19 +24,20 @@
           cursor: pointer;
       }
       .wv-menu-title{
-        color: #160d2e;
+        color: var(--dark);
         font-size: 16px;
         margin-bottom: 5px;
         font-weight: 500;
         flex-grow: 1;
       }
       .wv-menu-subtitle{
-         color: #7e7e7e;
+        color: var(--steelgrey);
          font-size: 13px;
          font-weight: 400;
          line-height: 15.41px;
       }
       .menulist-img{
+        color: var(--primary);
         float: right ;
       }
     }
@@ -88,7 +89,7 @@
             padding-right: 3px;
           }
           .wv-menulist-dropdown-logos-text{
-            color: #160d2e;
+            color: var(--dark);
             font-size:13px;
             margin-bottom: 5px; 
             font-weight: 400;
@@ -97,7 +98,7 @@
              width: 100%;
           } 
           .wv-menulist-dropdown-logos-subtext{
-           color: #757474;
+           color: var(--steelgrey);
            font-weight: 300; 
            font-size: 13.6px;
           }
