--- a/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.Scss
+++ b/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.Scss
@@ -10,12 +10,28 @@
       display: flex;
       align-items: center;
       .wv-image-icon{
-        width: 40px !important;
-        min-height: 40px !important;
-        margin-right: 25px !important;
-        padding-top: 20px !important;
-        padding-bottom: 22px !important;
+        width: 50px;
+        min-height: 40px;
+        margin-right: 25px;
+        padding-top: 20px;
+        padding-bottom: 22px;
       }
+      .wv-image-icon-small{
+        margin: 20px 30px 0px 3px;
+        width: 40px !important;
+        height: 40px !important;
+        border-radius: 2px;
+        padding: 3px !important;
+      }
+      .wv-menulist-dropdown-logos-text{
+        color: var(--dark);
+        font-size:13px !important;
+        margin-bottom: 5px !important;
+        font-weight: 400 !important;
+        margin-bottom: 5px !important;
+        line-height: 15.41px !important;
+        width: 100%;
+      } 
       .wv-dropdown-elements{
           width: 100% !important;
           padding-top: 20px;
@@ -41,95 +57,6 @@
         float: right ;
       }
     }
-
-    .wv-menulist-dropdown-lists{
-        width: 100%;
-        .wv-menulist-dropdown{
-          width: 100%;
-          display:flex;
-          align-items: center;
-          border-bottom-width: 1px;
-          border-bottom-color:#EFEDF2 ;
-          justify-content: space-between;
-          cursor: pointer;
-          .recommended-tag{
-            font-size: 9px;
-            display: inline-block;
-            margin-left: 5px;
-            background-color: #5240A7;
-            color: white;
-            padding: 0.1px 4px;
-            border-radius: 4px;
-            font-weight: 700;
-            letter-spacing: 0.5px;
-            transform: translateY(-2px);
-          }
-        }
-    
-          .wv-menulist-dropdown-types{
-            display: flex;
-            padding: 0 10px;
-            width: 100% !important;
-            padding: 0px;
-          }
-    
-          .wv-menulist-dropdown-logos{
-            margin-right:25px;
-            width: 40px;
-            height: 40px;
-            border-radius: 2px;
-          }
-    
-          .wv-menulist-logos-small{
-            margin: 20px 25px 0px 3px;
-            width: 40px !important;
-            height: 40px !important;
-            border-radius: 2px;
-            padding-left: 3px;
-            padding-right: 3px;
-          }
-          .wv-menulist-dropdown-logos-text{
-            color: var(--dark);
-            font-size:13px;
-            margin-bottom: 5px; 
-            font-weight: 400;
-             margin-bottom: 5px;
-             line-height: 15.41px;
-             width: 100%;
-          } 
-          .wv-menulist-dropdown-logos-subtext{
-           color: var(--steelgrey);
-           font-weight: 300; 
-           font-size: 13.6px;
-          }
-          .wv-menulist-dropdown-line-style{
-             width: 100%;
-             border-bottom-width: 1px;
-             border-bottom-color: #EFEDF2;
-             border-bottom-style: solid;
-             padding-top: 20px;
-             padding-bottom: 20px;
-             justify-content: space-between;
-             cursor: pointer;
-          }
-          .wv-menu-list-resume-flag{
-             background-color: #ff6868;
-             letter-spacing: 0.1;
-             font-size: 8px;
-             line-height: 10.06px;
-             position: relative;
-             top: -3px;
-             border-radius: 7px;
-             padding:  2px 4px;
-             margin-top: -30px;
-             color: white;
-             font-weight: 700;
-             width: 40px;
-             left: 6px;
-             height: 14px;
-          }
-     }
-
   }
 
 .wv-menulist-products + .wv-menulist-products {
@@ -140,9 +67,14 @@
     }
 }
 
-.wv-menulist-dropdown:last-child {
-    .wv-menulist-dropdown-line-style {
-        width: 100%;
-        padding-bottom: 40px;
+.wv-menulist-products + .wv-menulist-products .wv-menulist-header{
+  .wv-dropdown-elements{
+    border-top-style: none !important;
+  }
+}
+
+.wv-menulist-products:last-child{
+   .wv-dropdown-elements{
+      padding-bottom: 40px !important;
    }
 }
