--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -171,7 +171,7 @@
       .kaim-terms-info {
         margin-left: 10px;
 
-        a {
+        .terms-text {
           color: var(--primary);
           font-weight: 600;
           cursor: pointer;
