--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -2006,7 +2006,7 @@
 }
 
 .disease_specific_plan_img{
-  margin: 18px 0 0px 0 !important;
+  margin: 20px 0 0px 3px !important;
   width: 40px !important; 
   height: 40px !important;
 }
