--- a/react_webviews/src/dashboard/OtpVerify.scss
+++ b/react_webviews/src/dashboard/OtpVerify.scss
@@ -1,8 +1,19 @@
 .verify-otp-container {
+  min-height: 100%;
+  width: 100%;
+  max-width: 614px;
+  margin: auto;
+  background-color: white;
+  padding: 60px 20px 20px 20px;
+  .title {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 32px;
+    letter-spacing: 0px;
+  }
   .verify-otp-header {
     display: flex;
     align-items: center;
-    // justify-content: space-between;
     p {
       font-size: 13px;
       font-weight: 400;
@@ -21,5 +32,13 @@
       line-height: 21px;
       padding: 4px;
     }
+  }
+  .login-otp-button {
+    margin: 20px auto;
+  }
+  .login-otp-button-mobile {
+    position: absolute;
+    bottom: 0;
+    width: calc(100% - 40px);
   }
 }
