Imgc Added Space

--- a/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.scss
+++ b/react_webviews/src/common/ui/MenuListDropdown/WVMenuListDropdown.scss
@@ -41,14 +41,14 @@
         color: var(--dark);
         font-size: 16px;
         margin-bottom: 5px;
-        margin-left: 25px;
+        // margin-left: 25px;
         line-height: 24px;
         font-weight: 500;
         flex-grow: 1;
       }
       .wv-menu-subtitle{
         color: var(--steelgrey);
-        margin-left: 25px;
+        // margin-left: 25px;
         font-size: 13px;
         font-weight: 400;
         line-height: 21px;
