EnterVerifyDetails Page Update

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1755,6 +1755,7 @@ $header-title-font-size: 20px;
   color: var(--steelgrey);
   display: inline-block;
   margin-right: 12px;
+  cursor: pointer;
 }
 
 .mobile-navbar-menu{
