--- a/react_webviews/src/login_and_registration/Style.scss
+++ b/react_webviews/src/login_and_registration/Style.scss
@@ -338,6 +338,32 @@
   color: #333333;
 }
 
+.declaration-container{
+  margin-left: -12px;
+  margin-top: 10px;
+  display: flex;
+  align-items: flex-start;
+  svg{
+    width: 20px;
+    height: 20px;
+  }
+  p{
+    font-size: 13px;
+    line-height: 21px;
+  }
+  .Checkbox{
+    margin-top: -2px;
+  }
+}
+
+
+@media only screen and (max-height: 900px) {
+  .declaration-container{
+    position: absolute;
+    bottom: 80px;
+  }
+}
+
 @media only screen and (max-width: 1200px) {
   .login {
     .login-details {
