--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -121,7 +121,7 @@
 
 .wv-pdl-header-image{
   margin-left: auto !important;
-  border: 1px solid  var(--dark);
+  border: 1px solid  var(--highlight);
 }
 
 
