--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -1880,7 +1880,7 @@
 .horizontal-checkbox-layout{
   display: flex;
   align-items: center;
-  margin: -20px 0 0 20px;
+  margin: -20px 0 0 5%;
   .add-member-generic-checkbox{
     display: flex;
     align-items: center;
