--- a/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
+++ b/react_webviews/src/dashboard/PassiveIndexFunds/style.scss
@@ -125,9 +125,8 @@
 }
 
 
-.wv-cardsubtitle{
+.wv-card-subtitle{
   font-size: 11px;
   line-height: 18px;
-  font-weight: 400;
   color:  var(--steelgrey);
 }
