--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -153,6 +153,10 @@
     align-items: center;
     margin-top: 40px;
 
+    .upload-note {
+      flex-basis: 70%;
+    }
+
     .know_more {
       font-size: 14px;
       color: #160d2e;
